# graetzClosures

./: .gitignore  LICENSE  README.md  chi_fit.py  plates_onewall_poiseuille_parallel_fast.py  plates_poiseuille_parallel_fast.py  plot_full_diagrams.py  plot_sh_vs_da.py  pyproject.toml  sherwood_fit.py  sherwood_plug.py  sherwood_plug_fit.py  tube_poiseuille_parallel_fast.py  tube_solver.py
data/: Da.txt  Sh_oneplate_plug.txt  Sh_plates_plug.txt  Sh_tube_plug.txt
fits/: oneplate_plug_fit_summary.txt  oneplate_pois_chi_fit_summary.txt  oneplate_pois_fit_summary.txt  plates_plug_fit_summary.txt  plates_pois_chi_fit_summary.txt  plates_pois_fit_summary.txt  tube_plug_fit_summary.txt  tube_pois_chi_fit_summary.txt  tube_pois_fit_summary.txt
graetz_closures/: __init__.py  _correlations.py
